# space-weather-impact

./: CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml
.github/: copilot-instructions.md
data/: sample_noaa_response.json
docs/: design.md
include/: config.h  fetcher.h  model.h  parser.h  webhook.h
src/: config.cpp  fetcher.cpp  main.cpp  model.cpp  parser.cpp  webhook.cpp
tests/: CMakeLists.txt  test_fetcher.cpp  test_model.cpp  test_parser.cpp
